<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ActivityTracker</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="onCreate">onCreate:</string>
    <string name="initial_value">0</string>
    <string name="onStart">onStart:</string>
    <string name="onRestart">onRestart:</string>
    <string name="onResume">onResume:</string>
    <string name="onPause">onPause:</string>
    <string name="onStop">onStop:</string>
    <string name="onDestroy">onDestroy:</string>
    <string name="quote">Quote</string>
    <string name="quote_hint">Launch a new activity to get a quote</string>
    <string name="close_button">Close</string>
    <string name="intial_quote_text">Quote will appear here...</string>
    <string-array name="quote_array">
        <item>Baseball is 90% mental and the other half is physical \n- Yogi Berra</item>
        <item>Nobody goes there any more. It\'s too crowded.\n- Yogi Berra</item>
        <item>Half the lies they tell about me aren\'t true.\n- Yogi Berra</item>
        <item>It gets late early out there.\n- Yogi Berra</item>
        <item>A nickle ain\'t worth a dime anymore.\n- Yogi Berra</item>
    </string-array>


</resources>
